fixed the dna sequencing program

--- a/labs/lab 4/4th class.ipynb
+++ b/labs/lab 4/4th class.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 10\n"
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 1001\n"
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 75\n"
@@ -169,7 +169,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 5\n"
@@ -183,7 +183,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 4\n"
@@ -197,7 +197,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " +\n"
@@ -245,18 +245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "290b10a6-e78f-4b74-8a7e-9dd1b58bef2a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " AGTCATTGCTATAGCATAGTCAGTCAGTCaABACAAGTCACAAGTC\n",
-      " AGTC\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -264,13 +256,60 @@
       "Total count:  4\n",
       "Max length of matching string:  8\n",
       "Max length of matching string starts from 17 to 25\n",
-      "Percentage of matching sequence: 34.783%\n"
+      "\n",
+      "A: 34.78%\n",
+      "T: 23.91%\n",
+      "C: 21.74%\n",
+      "G: 17.39%\n",
+      "AG: 30.43%\n",
+      "TG: 4.35%\n",
+      "GA: 0.00%\n",
+      "GT: 26.09%\n",
+      "TC: 26.09%\n",
+      "CT: 4.35%\n",
+      "TAG: 13.04%\n",
+      "GTA: 0.00%\n",
+      "ATG: 0.00%\n",
+      "TGA: 0.00%\n",
+      "GAT: 0.00%\n",
+      "AGT: 39.13%\n",
+      "GCT: 6.52%\n",
+      "CTG: 0.00%\n",
+      "CGT: 0.00%\n",
+      "TCG: 0.00%\n",
+      "TGC: 6.52%\n",
+      "GTC: 39.13%\n",
+      "TGAC: 0.00%\n",
+      "TCAG: 17.39%\n",
+      "GCTA: 8.70%\n",
+      "ACTG: 0.00%\n",
+      "AGCT: 0.00%\n",
+      "TACG: 0.00%\n",
+      "ACGT: 0.00%\n",
+      "ATGC: 0.00%\n",
+      "ATCG: 0.00%\n",
+      "GTAC: 0.00%\n",
+      "CTGA: 0.00%\n",
+      "TCGA: 0.00%\n",
+      "AGTC: 52.17%\n",
+      "CAGT: 17.39%\n",
+      "TGCA: 0.00%\n",
+      "GCAT: 8.70%\n",
+      "CATG: 0.00%\n",
+      "CGTA: 0.00%\n",
+      "GTCA: 43.48%\n",
+      "CTAG: 0.00%\n",
+      "GACT: 0.00%\n",
+      "TAGC: 8.70%\n",
+      "GATC: 0.00%\n",
+      "CGAT: 0.00%\n"
      ]
     }
    ],
    "source": [
+    "import itertools\n",
     "# String matching\n",
-    "# \"AGTCATTGCTATAGCATAGTCAGTCAGTCaABACAAGTCACAAGTC\"\n",
+    "# \"AGTCATTGCTATAGCATAGTCAGTCAGTCAABACAAGTCACAAGTC\"\n",
     "# \"AGTC\"\n",
     "# follow up - find max len of matching string\n",
     "big_str = input()\n",
@@ -288,13 +327,58 @@
     "    else:\n",
     "        max_consecutive = max(max_consecutive, consecutive)\n",
     "        consecutive = 0\n",
+    "\n",
     "print(\"Total count: \", count)\n",
     "print(\"Max length of matching string: \", max_consecutive * len(match))\n",
     "\n",
     "print(\"Max length of matching string starts from\", big_str.index(match * max_consecutive), \"to\", big_str.index(match * max_consecutive) + (max_consecutive * len(match)))\n",
     "\n",
-    "percentage = round(((count * len(match)) / len(big_str)) * 100, 3)\n",
-    "print(\"Percentage of matching sequence: \", percentage, \"%\", sep=\"\")\n"
+    "def find_permutations_and_matches(string, larger_string):\n",
+    "    \"\"\"\n",
+    "    Finds all permutations of a string and calculates their matching percentages with a larger string.\n",
+    "\n",
+    "    Args:\n",
+    "        string: The smaller string to find permutations of.\n",
+    "        larger_string: The larger string to compare against.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of tuples, where each tuple contains a permutation and its matching percentage.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def get_substrings(s):\n",
+    "        substrings = set()\n",
+    "        for i in range(len(s)):\n",
+    "            for j in range(i + 1, len(s) + 1):\n",
+    "                substrings.add(s[i:j])\n",
+    "        return substrings\n",
+    "\n",
+    "    substrings = get_substrings(string)\n",
+    "    all_permutations = set()\n",
+    "\n",
+    "    for substring in substrings:\n",
+    "        permutations = set(itertools.permutations(substring))\n",
+    "        for permutation in permutations:\n",
+    "            permutation_str = ''.join(permutation)\n",
+    "            all_permutations.add(permutation_str)\n",
+    "\n",
+    "    sorted_permutations = sorted(all_permutations, key=len)\n",
+    "    \n",
+    "    results = []\n",
+    "    for perm in sorted_permutations:\n",
+    "        match_count = larger_string.count(perm)\n",
+    "        match_percentage = (match_count * len(perm) / len(larger_string)) * 100\n",
+    "        results.append((perm, match_percentage))\n",
+    "    \n",
+    "    return results\n",
+    "\n",
+    "results = find_permutations_and_matches(match, big_str)\n",
+    "\n",
+    "# percentage = round(((count * len(match)) / len(big_str)) * 100, 3)\n",
+    "# print(\"Percentage of matching sequence: \", percentage, \"%\", sep=\"\")\n",
+    "print()\n",
+    "\n",
+    "for permutation, percentage in results:\n",
+    "    print(f\"{permutation}: {percentage:.2f}%\")"
    ]
   }
  ],
@@ -314,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
