--- a/labs/lab 3/3rd class.ipynb
+++ b/labs/lab 3/3rd class.ipynb
@@ -134,12 +134,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "e4197f6f-0ffb-44c1-aba8-9e5ff3b4869c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum is:  6\n"
+     ]
+    }
+   ],
    "source": [
-    "# To take numbers as command line arguments and print its sum"
+    "# To take numbers as command line arguments and print its sum\n",
+    "\n",
+    "input_string = input(\"Enter numbers separated by spaces: \")\n",
+    "\n",
+    "args = input_string.split()\n",
+    "\n",
+    "numbers = [int(arg) for arg in args]\n",
+    "\n",
+    "total = sum(numbers)\n",
+    "\n",
+    "print(\"The sum is: \", total)"
    ]
   },
   {
@@ -181,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
