added lab 7, refactored file structure

--- a/labs/lab 2/notebook/2nd class questions.ipynb
+++ b/labs/lab 2/notebook/2nd class questions.ipynb
@@ -177,16 +177,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "6ac062a0-11ba-4e7e-b819-6067372eecb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# prepare grocery bill, enter name of items purchased, qty, price per unit"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "id": "e711c54f-da12-4d8c-92cd-2db1273c3308",
    "metadata": {},
@@ -220,6 +210,7 @@
     }
    ],
    "source": [
+    "# prepare grocery bill, enter name of items purchased, qty, price per unit\n",
     "no_of_items = int(input(\"enter number of items: \"))\n",
     "items = []\n",
     "total_price = 0\n",
