--- a/labs/lab 4/notebook/4th class.ipynb
+++ b/labs/lab 4/notebook/4th class.ipynb
@@ -261,48 +261,48 @@
       "T: 23.91%\n",
       "C: 21.74%\n",
       "G: 17.39%\n",
-      "AG: 30.43%\n",
+      "TC: 26.09%\n",
+      "GT: 26.09%\n",
       "TG: 4.35%\n",
       "GA: 0.00%\n",
-      "GT: 26.09%\n",
-      "TC: 26.09%\n",
       "CT: 4.35%\n",
+      "AG: 30.43%\n",
+      "TGC: 6.52%\n",
+      "ATG: 0.00%\n",
+      "GAT: 0.00%\n",
+      "GTC: 39.13%\n",
       "TAG: 13.04%\n",
       "GTA: 0.00%\n",
-      "ATG: 0.00%\n",
-      "TGA: 0.00%\n",
-      "GAT: 0.00%\n",
-      "AGT: 39.13%\n",
-      "GCT: 6.52%\n",
-      "CTG: 0.00%\n",
       "CGT: 0.00%\n",
+      "CTG: 0.00%\n",
+      "AGT: 39.13%\n",
+      "TGA: 0.00%\n",
+      "GCT: 6.52%\n",
       "TCG: 0.00%\n",
-      "TGC: 6.52%\n",
-      "GTC: 39.13%\n",
       "TGAC: 0.00%\n",
-      "TCAG: 17.39%\n",
-      "GCTA: 8.70%\n",
-      "ACTG: 0.00%\n",
-      "AGCT: 0.00%\n",
-      "TACG: 0.00%\n",
-      "ACGT: 0.00%\n",
-      "ATGC: 0.00%\n",
-      "ATCG: 0.00%\n",
-      "GTAC: 0.00%\n",
-      "CTGA: 0.00%\n",
-      "TCGA: 0.00%\n",
-      "AGTC: 52.17%\n",
-      "CAGT: 17.39%\n",
-      "TGCA: 0.00%\n",
-      "GCAT: 8.70%\n",
-      "CATG: 0.00%\n",
       "CGTA: 0.00%\n",
+      "AGCT: 0.00%\n",
       "GTCA: 43.48%\n",
-      "CTAG: 0.00%\n",
-      "GACT: 0.00%\n",
       "TAGC: 8.70%\n",
+      "CATG: 0.00%\n",
+      "TACG: 0.00%\n",
+      "CTAG: 0.00%\n",
+      "CAGT: 17.39%\n",
+      "ATCG: 0.00%\n",
       "GATC: 0.00%\n",
-      "CGAT: 0.00%\n"
+      "GACT: 0.00%\n",
+      "ACGT: 0.00%\n",
+      "TGCA: 0.00%\n",
+      "CGAT: 0.00%\n",
+      "TCGA: 0.00%\n",
+      "TCAG: 17.39%\n",
+      "AGTC: 52.17%\n",
+      "ACTG: 0.00%\n",
+      "GCAT: 8.70%\n",
+      "GCTA: 8.70%\n",
+      "CTGA: 0.00%\n",
+      "ATGC: 0.00%\n",
+      "GTAC: 0.00%\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
