--- a/labs/lab 5/notebook/5th class.ipynb
+++ b/labs/lab 5/notebook/5th class.ipynb
@@ -260,10 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "2a2fb2cd-bc25-43b7-9017-21fd56f9f816",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 6\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -518,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "b0bd20c9-a15f-4f2a-bb98-cad7645bcecc",
    "metadata": {},
    "outputs": [
@@ -548,12 +555,12 @@
     "        print(\" \", end=\"\")\n",
     "    for k in range(2 * i + 1):\n",
     "        print(\"*\", end=\"\")\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "cb73b362-e244-42cf-94b8-8c7526bf1a51",
    "metadata": {},
    "outputs": [
@@ -590,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a0be3259-80da-4fb2-b68a-c0b0e053c1ac",
    "metadata": {},
    "outputs": [
@@ -665,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "aed29e99-c171-451a-8d62-5b9ca046cc69",
    "metadata": {},
    "outputs": [
@@ -693,12 +700,12 @@
     "    for j in range(i + 1):\n",
     "        print(count, end=' ')\n",
     "        count += 1\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0d9a56a5-1ceb-4c2b-9fb1-c16a80e599fd",
    "metadata": {},
    "outputs": [
@@ -735,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "458093bb-f5fb-4a9d-a8a7-5d65baf8f22b",
    "metadata": {},
    "outputs": [
@@ -773,7 +780,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
