--- a/labs/lab 6/notebook/lab 6.ipynb
+++ b/labs/lab 6/notebook/lab 6.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "# 1) Write a python rogram to triple all numbers in a list using python map\n",
+    "# 1) Write a python program to triple all numbers in a list using python map\n",
     "\n",
     "arr = [1, 2, 3, 4, 5]\n",
     "def triple(x):\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a2f896c9-a3dc-4405-b416-009c025ec80f",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34\n"
+      "36\n"
      ]
     }
    ],
@@ -336,7 +336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
